--- a/coptic_museum_backend/requirements.txt
+++ b/coptic_museum_backend/requirements.txt
@@ -14,3 +14,4 @@ django-cors-headers>=3.14.0
 python-dotenv>=1.0.0
 gunicorn>=20.1.0            # for production server (if using)
 psycopg2-binary>=2.9.7     # if using PostgreSQL; omit if using SQLite
+setuptools>=65.5.0
