--- a/coptic_museum_backend/requirements.txt
+++ b/coptic_museum_backend/requirements.txt
@@ -1,17 +1,286 @@
-attrs<22.2,>=19.3
-numpy<1.25.0,>=1.19.2
-packaging<21.0,>=20.0
-pymongo[srv,tls]<4.4,>=3.8
-scikit-learn<1.2,>=0.22
-aiohttp<3.9.0  # Sometimes Rasa needs specific aiohttp version
-spacy
-torch
-pillow
-
-Django>=4.2,<5.0
-djangorestframework>=3.14.0
-django-cors-headers>=3.14.0
-python-dotenv>=1.0.0
-gunicorn>=20.1.0            # for production server (if using)
-psycopg2-binary>=2.9.7     # if using PostgreSQL; omit if using SQLite
-setuptools>=65.5.0
+absl-py==1.4.0
+accelerate==1.6.0
+aio-pika==8.2.3
+aiofiles==24.1.0
+aiogram==2.15
+aiohttp==3.9.5
+aiohttp-retry==2.9.1
+aiormq==6.4.2
+aiosignal==1.3.2
+alembic==1.15.2
+anyio==4.9.0
+appdirs==1.4.4
+APScheduler==3.9.1.post1
+asgiref==3.8.1
+astunparse==1.6.3
+async-timeout==4.0.3
+attrs==25.3.0
+Authlib==1.5.2
+azure-ai-formrecognizer==3.3.3
+azure-common==1.1.28
+azure-core==1.34.0
+babel==2.17.0
+backoff==2.2.1
+beautifulsoup4==4.13.4
+bidict==0.23.1
+blinker==1.9.0
+boilerpy3==1.0.7
+boto3==1.37.11
+botocore==1.37.11
+CacheControl==0.12.14
+cachetools==5.5.2
+cattrs==24.1.3
+certifi==2025.1.31
+cffi==1.17.1
+charset-normalizer==3.4.1
+click==8.1.8
+cloudpickle==3.1.1
+colorama==0.4.6
+colorclass==2.2.2
+coloredlogs==15.0.1
+colorhash==1.2.1
+confluent-kafka==2.8.2
+cryptography==44.0.2
+cycler==0.12.1
+dask==2022.10.2
+databricks-sdk==0.52.0
+Deprecated==1.2.18
+distro==1.9.0
+Django==5.1.7
+django-cors-headers==4.7.0
+django-jazzmin==3.0.1
+django-parler==2.3
+django-parler-rest==2.2
+django-ratelimit==4.1.0
+djangorestframework==3.15.2
+djangorestframework_simplejwt==5.5.0
+dnspython==2.3.0
+docker==7.1.0
+docopt==0.6.2
+drf-yasg==1.21.10
+elastic-transport==7.16.0
+elasticsearch==7.17.12
+Events==0.5
+exceptiongroup==1.3.0
+faiss-cpu==1.7.2
+farm-haystack==1.26.4.post0
+fastapi==0.115.12
+fbmessenger==6.0.0
+filelock==3.17.0
+fire==0.7.0
+Flask==3.1.0
+flatbuffers==25.2.10
+fonttools==4.56.0
+frozenlist==1.5.0
+fsspec==2025.3.0
+future==1.0.0
+gast==0.4.0
+gitdb==4.0.12
+GitPython==3.1.44
+google-auth==2.38.0
+google-auth-oauthlib==1.0.0
+google-pasta==0.2.0
+graphene==3.4.3
+graphql-core==3.2.6
+graphql-relay==3.2.0
+greenlet==3.1.1
+grpcio==1.71.0
+h11==0.16.0
+h5py==3.13.0
+httpcore==1.0.9
+httptools==0.6.4
+httpx==0.28.1
+huggingface-hub==0.31.1
+humanfriendly==10.0
+idna==3.10
+importlib_metadata==8.6.1
+inflect==7.5.0
+inflection==0.5.1
+isodate==0.7.2
+itsdangerous==2.2.0
+jarowinkler==1.2.3
+jax==0.4.30
+jaxlib==0.4.30
+Jinja2==3.1.6
+jmespath==1.0.1
+joblib==1.4.2
+jsonpickle==3.0.4
+jsonschema==4.17.3
+keras==2.12.0
+kiwisolver==1.4.8
+langdetect==1.0.9
+lazy-imports==0.3.1
+libclang==18.1.1
+llvmlite==0.44.0
+locket==1.0.0
+loguru==0.7.3
+lxml==5.4.0
+Mako==1.3.10
+Markdown==3.7
+MarkupSafe==3.0.2
+matplotlib==3.5.3
+mattermostwrapper==2.2
+ml_dtypes==0.5.1
+mlflow==2.22.0
+mlflow-skinny==2.22.0
+more-itertools==10.7.0
+mpmath==1.3.0
+msgpack==1.1.0
+msrest==0.7.1
+multidict==5.2.0
+networkx==2.6.3
+nltk==3.9.1
+num2words==0.5.14
+numba==0.61.2
+numpy==1.26.4
+oauthlib==3.2.2
+openai-whisper==20240930
+opencv-python==4.11.0.86
+opensearch-py==2.8.0
+opentelemetry-api==1.33.0
+opentelemetry-sdk==1.33.0
+opentelemetry-semantic-conventions==0.54b0
+opt_einsum==3.4.0
+outcome==1.3.0.post0
+packaging==21.3
+pamqp==3.2.1
+pandas==2.2.3
+partd==1.4.2
+pdf2image==1.17.0
+pdf2text==1.0.0
+pdfminer==20191125
+pillow==11.1.0
+pinecone-client==2.2.4
+platformdirs==4.3.8
+pluggy==1.5.0
+portalocker==2.10.1
+posthog==4.0.1
+prompt-toolkit==3.0.28
+prompthub-py==4.0.0
+propcache==0.3.0
+protobuf==4.23.3
+psutil==7.0.0
+psycopg2==2.9.10
+psycopg2-binary==2.9.10
+pyarrow==19.0.1
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
+pycparser==2.22
+pycryptodome==3.22.0
+pydantic==1.10.9
+pydot==1.4.2
+PyJWT==2.9.0
+pykwalify==1.8.0
+pymongo==4.13.0
+PyMuPDF==1.25.5
+pyparsing==3.2.1
+pyreadline3==3.5.4
+pyrsistent==0.20.0
+PySocks==1.7.1
+pytesseract==0.3.13
+python-crfsuite==0.9.11
+python-dateutil==2.8.2
+python-decouple==3.8
+python-docx==1.1.2
+python-engineio==4.11.2
+python-frontmatter==1.1.0
+python-magic-bin==0.4.14
+python-pptx==1.0.0
+python-socketio==5.12.1
+pytz==2022.7.1
+pywin32==309
+PyYAML==6.0.2
+quantulum3==0.9.2
+questionary==1.10.0
+randomname==0.1.5
+rank-bm25==0.2.2
+rapidfuzz==2.7.0
+rasa==3.6.21
+rasa-sdk==3.6.2
+redis==4.6.0
+regex==2022.10.31
+requests==2.32.3
+requests-cache==0.9.8
+requests-oauthlib==2.0.0
+requests-toolbelt==1.0.0
+rocketchat-API==1.30.0
+rsa==4.9
+ruamel.yaml==0.17.21
+ruamel.yaml.clib==0.2.12
+s3transfer==0.11.4
+safetensors==0.4.5
+sanic==21.12.2
+Sanic-Cors==2.0.1
+sanic-jwt==1.8.0
+sanic-routing==0.7.2
+scikit-learn==1.6.1
+scipy==1.10.1
+selenium==4.32.0
+sentence-transformers==3.0.0
+sentencepiece==0.2.0
+sentry-sdk==1.14.0
+seqeval==1.2.2
+simple-websocket==1.1.0
+six==1.17.0
+sklearn-crfsuite==0.3.6
+skops==0.9.0
+slack_sdk==3.34.0
+smmap==5.0.2
+sniffio==1.3.1
+sortedcontainers==2.4.0
+soupsieve==2.7
+SQLAlchemy==1.4.54
+SQLAlchemy-Utils==0.41.2
+sqlparse==0.5.3
+sseclient-py==1.8.0
+starlette==0.46.2
+structlog==23.3.0
+structlog-sentry==2.1.0
+sympy==1.14.0
+tabulate==0.9.0
+tarsafe==0.0.4
+tenacity==9.1.2
+tensorboard==2.12.3
+tensorboard-data-server==0.7.2
+tensorflow==2.12.0
+tensorflow-estimator==2.12.0
+tensorflow-hub==0.13.0
+tensorflow-intel==2.12.0
+tensorflow-io-gcs-filesystem==0.31.0
+termcolor==2.5.0
+terminaltables==3.1.10
+threadpoolctl==3.5.0
+tika==3.1.0
+tiktoken==0.9.0
+tokenizers==0.21.1
+toolz==1.0.0
+torch==2.7.0
+tqdm==4.67.1
+transformers==4.51.3
+trio==0.30.0
+trio-websocket==0.12.2
+twilio==8.2.2
+typeguard==4.4.2
+typing-utils==0.1.0
+typing_extensions==4.12.2
+tzdata==2025.1
+tzlocal==5.3.1
+ujson==5.10.0
+uritemplate==4.1.1
+url-normalize==2.2.1
+urllib3==1.26.20
+uvicorn==0.34.2
+validators==0.35.0
+waitress==3.0.2
+wcwidth==0.2.13
+weaviate-client==3.26.7
+webexteamssdk==1.6.1
+websocket-client==1.8.0
+websockets==10.4
+Werkzeug==3.1.3
+win32_setctime==1.2.0
+wrapt==1.14.1
+wsproto==1.2.0
+XlsxWriter==3.2.3
+yarl==1.18.3
+zipp==3.21.0
